# furp-2026-Zijie-Zhang-WheelLeggedRL

./: .gitignore  README.md  main.py  pyproject.toml  setup_lab_pc.bat  setup_remote.bat  setup_remote.ps1
docs/: 00_weekly.md  project_handbook.md  rl_wheel_balance_learning_notes.md
docs/experiments/: robust_balance_results.md
docs/meeting_notes/: 2026-06-08.md  TEMPLATE.md
src/hoppertrex_mjlab/: .gitignore  README.md
src/hoppertrex_mjlab/assets/: HopperTrex_CFG.py  __init__.py  random_action.py  spawn_robot.py
src/hoppertrex_mjlab/assets/hoppertrex/: config.yaml  robot.urdf  robot.xml
src/hoppertrex_mjlab/assets/hoppertrex/meshes/: calf_left.stl  calf_right.stl  thigh_left.stl  thigh_right.stl  wheel.stl
src/hoppertrex_mjlab/assets/hoppertrex/metadata/: calf_left.part  calf_right.part  chassis_base.part  thigh_left.part  thigh_right.part  wheel.part
src/hoppertrex_mjlab/scripts/: fixed_wheel_sweep.py  random_agent.py  zero_agent.py
src/hoppertrex_mjlab/scripts/rsl_rl/: diagnose_turn_policy.py  migrate_balance_1d_to_turn_2d.py  play.py  reset_turn_yaw_head.py  train.py
src/hoppertrex_mjlab/tasks/: __init__.py  hoppertrex_balance_task.py
src/hoppertrex_mjlab/tasks/agents/: __init__.py  hoppertrex_balance_rsl_rl_ppo.py
src/hoppertrex_mjlab/tools/: export_onshape_robot.py  onshape.key.example
src/practice/maze_car/: curriculum_v4_plus.py  evaluate.py  evaluate_v4_plus.py  maze_car_env.py  maze_car_env_v4_plus.py  train.py  train_v4_plus.py
src/practice/maze_car/models/: vecnormalize_v4_plus.pkl
