[project]
name = "wheel-legged-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "mjlab",
    "numpy>=2.4.6",
    "pygame>=2.6.1",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.20.0",
]

[tool.uv.sources]
mjlab = { path = "../mjlab-main", editable = true }
