[project]
name = "wheel-legged-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "mjlab[cu128]",
    "numpy>=2.4.6",
    "pygame>=2.6.1",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
mjlab = { path = "../mjlab-main", editable = true }
torch = { index = "pytorch-cu128" }
warp-lang = { index = "nvidia" }
